--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -43,6 +43,9 @@
         <argument
             android:name="token"
             app:argType="string" />
+        <action
+            android:id="@+id/action_homeFragment_to_selectAccountFragment"
+            app:destination="@id/selectAccountFragment" />
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
@@ -58,7 +61,10 @@
         android:id="@+id/selectAccountFragment"
         android:name="com.example.moneyinc.SelectAccountFragment"
         android:label="SelectAccountFragment"
-        tools:layout="@layout/fragment_select_account"/>
+        tools:layout="@layout/fragment_select_account">
+        <argument android:name="token"
+            app:argType="string" />
+    </fragment>
     <fragment
         android:id="@+id/creditCardFragment"
         android:name="com.example.moneyinc.CreditCardFragment"
