--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -20,8 +20,11 @@
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
-            android:id="@+id/action_loginFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            android:id="@+id/action_loginFragment_to_selectAccountFragment"
+            app:destination="@id/selectAccountFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_employeeMenuFragment"
+            app:destination="@id/employeeMenuFragment" />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
@@ -51,12 +54,26 @@
         android:id="@+id/settingsFragment"
         android:name="com.example.moneyinc.SettingsFragment"
         android:label="SettingsFragment"
-        tools:layout="@layout/fragment_settings"/>
+        tools:layout="@layout/fragment_settings">
+        <argument
+            android:name="token"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_settingsFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
     <fragment
         android:id="@+id/personFragment"
         android:name="com.example.moneyinc.PersonFragment"
         android:label="PersonFragment"
-        tools:layout="@layout/fragment_person"/>
+        tools:layout="@layout/fragment_person">
+        <argument
+            android:name="token"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_personFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
     <fragment
         android:id="@+id/selectAccountFragment"
         android:name="com.example.moneyinc.SelectAccountFragment"
@@ -64,15 +81,41 @@
         tools:layout="@layout/fragment_select_account">
         <argument android:name="token"
             app:argType="string" />
+        <action
+            android:id="@+id/action_selectAccountFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/creditCardFragment"
         android:name="com.example.moneyinc.CreditCardFragment"
         android:label="CreditCardFragment"
-        tools:layout="@layout/fragment_credit_card"/>
+        tools:layout="@layout/fragment_credit_card">
+        <argument
+            android:name="token"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_creditCardFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
     <fragment
         android:id="@+id/walletFragment"
         android:name="com.example.moneyinc.WalletFragment"
         android:label="WalletFragment"
-        tools:layout="@layout/fragment_wallet"/>
+        tools:layout="@layout/fragment_wallet">
+        <argument
+            android:name="token"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_walletFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/employeeMenuFragment"
+        android:name="com.example.moneyinc.EmployeeMenuFragment"
+        android:label="fragment_employee_menu"
+        tools:layout="@layout/fragment_employee_menu" >
+        <argument
+            android:name="token"
+            app:argType="string" />
+    </fragment>
 </navigation>
