--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -61,6 +61,9 @@
         <action
             android:id="@+id/action_settingsFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_settingsFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/personFragment"
@@ -96,6 +99,9 @@
         <action
             android:id="@+id/action_creditCardFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_creditCardFragment_to_paymentsFragment"
+            app:destination="@id/paymentsFragment" />
     </fragment>
     <fragment
         android:id="@+id/walletFragment"
@@ -117,5 +123,17 @@
         <argument
             android:name="token"
             app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/paymentsFragment"
+        android:name="com.example.moneyinc.PaymentsFragment"
+        android:label="PaymentsFragment"
+        tools:layout="@layout/fragment_payments">
+        <argument
+            android:name="token"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_paymentsFragment_to_creditCardFragment"
+            app:destination="@id/creditCardFragment" />
     </fragment>
 </navigation>
