--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -100,8 +100,8 @@
             android:id="@+id/action_creditCardFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
         <action
-            android:id="@+id/action_creditCardFragment_to_paymentsFragment"
-            app:destination="@id/paymentsFragment" />
+            android:id="@+id/action_creditCardFragment_to_paymentFragment"
+            app:destination="@id/paymentFragment" />
     </fragment>
     <fragment
         android:id="@+id/walletFragment"
@@ -125,15 +125,15 @@
             app:argType="string" />
     </fragment>
     <fragment
-        android:id="@+id/paymentsFragment"
-        android:name="com.example.moneyinc.PaymentsFragment"
-        android:label="PaymentsFragment"
-        tools:layout="@layout/fragment_payments">
+        android:id="@+id/paymentFragment"
+        android:name="com.example.moneyinc.PaymentFragment"
+        android:label="fragment_payment"
+        tools:layout="@layout/fragment_payment" >
         <argument
             android:name="token"
             app:argType="string" />
         <action
-            android:id="@+id/action_paymentsFragment_to_creditCardFragment"
+            android:id="@+id/action_paymentFragment_to_creditCardFragment"
             app:destination="@id/creditCardFragment" />
     </fragment>
 </navigation>
