--- a/app/src/main/res/layout/fragment_select_account.xml
+++ b/app/src/main/res/layout/fragment_select_account.xml
@@ -54,7 +54,9 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/button18"/>
+                android:layout_marginTop="28dp"
+                app:layout_constraintTop_toBottomOf="@+id/button18"
+                tools:layout_editor_absoluteX="-47dp" />
 
             <Button
                 android:id="@+id/button2"
