--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/welcome_text"
                 android:layout_width="140dp"
                 android:layout_height="40dp"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="40dp"
                 android:gravity="center_vertical|left"
                 android:text="Bem-Vindo"
@@ -34,11 +34,12 @@
                 android:layout_width="360dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="164dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginEnd="20dp"
-                android:text="Saldo"
+                android:background="#7f0000"
                 android:gravity="center"
-                android:textColor="@color/black"
+                android:text="Saldo"
+                android:textColor="@color/white"
                 android:textSize="25dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.545"
@@ -51,6 +52,7 @@
                 android:layout_height="100dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
+                android:background="@drawable/textshape"
                 android:gravity="center"
                 android:text="saldo disp"
                 android:textColor="@color/black"
@@ -62,12 +64,12 @@
 
             <TextView
                 android:id="@+id/nometext"
-                android:layout_width="240dp"
+                android:layout_width="230dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="10dp"
-                android:text="Nome"
                 android:gravity="center_vertical|left"
+                android:text="Nome"
                 android:textColor="@color/black"
                 android:textSize="25dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -79,11 +81,13 @@
                 android:layout_width="360dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="48dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginEnd="20dp"
-                android:text="Ultimos Movimentos"
+                android:background="#7f0000"
                 android:gravity="center"
-                android:textColor="@color/black"
+                android:text="Últimos Movimentos"
+                android:textColor="@color/white"
+
                 android:textSize="25dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -95,6 +99,7 @@
                 android:layout_height="150dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
+                android:background="@drawable/textshape"
                 android:text="TextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
