--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -17,13 +17,13 @@
                 android:id="@+id/editTextDate"
                 android:layout_width="300dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="46dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginEnd="46dp"
+                android:layout_marginEnd="40dp"
                 android:ems="10"
-                android:text="Data de Pagamento"
                 android:gravity="center"
                 android:inputType="date"
+                android:text="Data de Pagamento"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
@@ -32,13 +32,13 @@
                 android:id="@+id/editTextTextPersonName2"
                 android:layout_width="300dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="46dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="150dp"
-                android:layout_marginEnd="46dp"
+                android:layout_marginEnd="40dp"
                 android:ems="10"
+                android:gravity="center"
                 android:inputType="textPersonName"
                 android:text="Conta"
-                android:gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -47,13 +47,13 @@
                 android:id="@+id/editTextTextPersonName3"
                 android:layout_width="300dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="46dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginEnd="46dp"
+                android:layout_marginEnd="40dp"
                 android:ems="10"
+                android:gravity="center"
                 android:inputType="textPersonName"
                 android:text="Referência"
-                android:gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
@@ -62,13 +62,13 @@
                 android:id="@+id/editTextTextPersonName4"
                 android:layout_width="300dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="46dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginEnd="46dp"
+                android:layout_marginEnd="40dp"
                 android:ems="10"
+                android:gravity="center"
                 android:inputType="textPersonName"
                 android:text="Código"
-                android:gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
@@ -77,13 +77,13 @@
                 android:id="@+id/editTextTextPersonName5"
                 android:layout_width="300dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="46dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginEnd="46dp"
+                android:layout_marginEnd="40dp"
                 android:ems="10"
+                android:gravity="center"
                 android:inputType="textPersonName"
                 android:text="Valor"
-                android:gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
@@ -113,13 +113,17 @@
 
             <Button
                 android:id="@+id/button15"
-                android:layout_width="300dp"
+                android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="46dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="120dp"
-                android:layout_marginEnd="46dp"
+                android:layout_marginEnd="30dp"
                 android:layout_marginBottom="135dp"
                 android:text="Confirmar Pagamento"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:background="@drawable/buttonshape"
+                app:backgroundTint="#7f0000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
