--- a/app/src/main/res/layout/fragment_credit_card.xml
+++ b/app/src/main/res/layout/fragment_credit_card.xml
@@ -57,9 +57,11 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="50dp"
-                android:text="Efetuar Pagamento"
                 android:background="@drawable/buttonshape"
-                android:textColor="@color/black"
+                android:text="Criar Cartão"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                app:backgroundTint="#7f0000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
