--- a/app/src/main/res/layout/select_acount_view.xml
+++ b/app/src/main/res/layout/select_acount_view.xml
@@ -8,28 +8,45 @@
 
     <TextView
         android:id="@+id/texttitular"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="81dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="80dp"
+        android:gravity="center_vertical"
         android:text="CONTA"
-        android:textSize="25dp"
+        android:textColor="@color/black"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textid"
-        app:layout_constraintHorizontal_bias="0.271"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textid"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="192dp"
+        android:layout_width="23dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="80dp"
         android:text="ID"
-        android:textSize="25dp"
+        android:gravity="center_vertical"
+        android:textColor="@color/black"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/texttitular"
+        app:layout_constraintEnd_toStartOf="@+id/texttitular"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textsaldo"
+        android:layout_width="78dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="20dp"
+        android:gravity="center_vertical"
+        android:text="SALDO"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
