--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -87,7 +87,7 @@
         android:label="SettingsFragment"
         tools:layout="@layout/fragment_settings">
         <argument
-            android:name="token"
+            android:name="id"
             app:argType="string" />
         <action
             android:id="@+id/action_settingsFragment_to_homeFragment"
@@ -102,11 +102,22 @@
         android:label="PersonFragment"
         tools:layout="@layout/fragment_person">
         <argument
-            android:name="token"
+            android:name="id"
             app:argType="string" />
         <action
             android:id="@+id/action_personFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <argument
+            android:name="titular1"
+            app:argType="string" />
+        <argument android:name="iban"
+            app:argType="string" />
+        <argument
+            android:name="nib"
+            app:argType="string" />
+        <argument
+            android:name="swift"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/selectAccountFragment"
@@ -126,14 +137,11 @@
         android:label="CreditCardFragment"
         tools:layout="@layout/fragment_credit_card">
         <argument
-            android:name="token"
+            android:name="id"
             app:argType="string" />
         <action
             android:id="@+id/action_creditCardFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
-        <action
-            android:id="@+id/action_creditCardFragment_to_paymentFragment"
-            app:destination="@id/paymentFragment" />
     </fragment>
     <fragment
         android:id="@+id/walletFragment"
@@ -141,11 +149,14 @@
         android:label="WalletFragment"
         tools:layout="@layout/fragment_wallet">
         <argument
-            android:name="token"
+            android:name="id"
             app:argType="string" />
         <action
             android:id="@+id/action_walletFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_walletFragment_to_paymentFragment"
+            app:destination="@id/paymentFragment" />
     </fragment>
     <fragment
         android:id="@+id/employeeMenuFragment"
@@ -162,10 +173,10 @@
         android:label="fragment_payment"
         tools:layout="@layout/fragment_payment" >
         <argument
-            android:name="token"
+            android:name="id"
             app:argType="string" />
         <action
-            android:id="@+id/action_paymentFragment_to_creditCardFragment"
-            app:destination="@id/creditCardFragment" />
+            android:id="@+id/action_paymentFragment_to_walletFragment"
+            app:destination="@id/walletFragment" />
     </fragment>
 </navigation>
