--- a/app/src/main/res/layout/fragment_acc_list.xml
+++ b/app/src/main/res/layout/fragment_acc_list.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -8,7 +7,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".SelectAccountFragment">
+        tools:context=".AccListFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -16,7 +15,7 @@
             tools:context=".MainActivity">
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/Selecionar"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
@@ -43,7 +42,7 @@
                 android:textSize="15dp"
                 app:layout_constraintEnd_toStartOf="@+id/pageup"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                app:layout_constraintTop_toBottomOf="@+id/Selecionar" />
 
             <Button
                 android:id="@+id/pageup"
@@ -58,7 +57,7 @@
                 android:textSize="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/pagedown"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                app:layout_constraintTop_toBottomOf="@+id/Selecionar" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
