--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,7 +47,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/welcome_text" />
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/textsaldo"
                 android:layout_width="360dp"
                 android:layout_height="100dp"
                 android:layout_marginStart="20dp"
@@ -91,7 +91,7 @@
                 android:textSize="25dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView10" />
+                app:layout_constraintTop_toBottomOf="@+id/textsaldo" />
 
             <TextView
                 android:id="@+id/textView13"
@@ -152,4 +152,5 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </FrameLayout></layout>
+    </FrameLayout>
+</layout>
